testsuite/tests/properties/invalid_prop_def/correct.lkt
import common

class BarNode: FooNode {
    @export fun prop(): Bool = true
}
